# backend/docs/swagger.yaml
@@ -11,6 +11,19 @@ info:
   contact: {}
 paths:
   /api/v1/materials:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Get all materials
     post:
       consumes:
       - multipart/form-data
